# ppnm

./: README.md  gitCommitAll.sh  gitignore  somefile.c  token
Nice functions/: binarySearch.c  binarySearch.h  diffClock.c  input2Array.c  inputToArray.c
exam/: CMakeLists.txt  README.md  integration_tri.c  integration_tri.h  main  main.c  output.txt  test.txt
exercises/: komplex.c
exercises/epsilon/: a.out  diffClock.c  diffClock.h  epsilon  epsilon.c  equal.c  equal.h  funcs.h  makefile  nameDigit.c  out.txt
exercises/gnuplot/: main  main.c  makefile  myErf.h  myTGamma.c  tabulated_data_erf.txt  tmp_script_gnu2pyx_erf.gpi  tmp_script_gnu2pyx_tgamma.gpi
exercises/gsl-integ/: besselint.c  erfint.c  lnXsqrtX.c  main  main.c  makefile  output_lnxsqrtx.txt
exercises/gsl-matrix/: main  main.c  out.txt
exercises/hello/: hello  hello.c  makefile  makefile.save  out.txt
exercises/inputoutput/: cmdlread  cmdlread.c  fileread  (+7 more)
general_makefile/: makefile  someprogram
gnuplot/: gnuplot.c  gnuplot.h  gnuplotExample.c  gunplot  testdata.txt
homework/1-interpolation/: CMakeLists.txt  cubicSpline.c  cubic_spline_plot.gpi  main  main.c  output.txt
homework/10-artificial-neural-networks/: CMakeLists.txt  input2Array.c  input2Array.h  main  main.c  makefile  minimization.h  neuralnetwork.c  neuralnetwork.h  predictions.gpi  predictions.txt  sin_tabulated.txt
qna/: main  main.c  makefile  ppnm_q1_answers.txt  ppnm_q2_answers.txt  ppnm_q2_makefile_answers.txt  ppnm_q3_answers.txt  ppnm_q4_answers.txt  ppnm_q5_answers.txt  ppnm_q6_answers.txt  ppnm_q7_answers.txt
(+118 files in other folders)
